# aws_quiz

./: Cargo.toml  README.md  questions.json
src/: main.rs
ui/: app-window.slint
