[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
rand = "0.9.0-alpha.2"

[build-dependencies]
slint-build = "1.8.0"
